@@ -82,10 +82,12 @@ the queue). This parameter, like `track`, may be repeated multiple times.
 `albumarist - albumname` This parameter, like `track`, may be repeated multiple
 times.
 
-`minsim` and `maxsim` (integers in the range 0..100) can be used to restrict the
-usable similarity range. A similarity of 0 implies track is almost identical,
-100 would be completely different. By default `minsim` is set to 5, and `maxsim`
-to 75.
+`maxsim` (range 0..100) can be used to set the maximum similarity factor. A
+factor of 0 would imply the track is identical, 100 completely different. 75 is
+the default value.
+
+`shuffle` if set to `1` will cause extra tracks to be located, this list
+shuffled, and then the desired `count` tracks taken from this shuffled list.
 
 The API will try query Musly for 25 times the specified `count` tracks (default
 of 5) for each supplied seed track. (This is to allow for filtering on genre,
